<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <ImageView
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:src="@drawable/food_logo" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                tools:textSize="14dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_password"
                android:imeActionId="666"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                tools:textSize="14dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_name"
                android:imeOptions="actionUnspecified"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                tools:textSize="14dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:focusableInTouchMode="true"
                android:hint="@string/address"
                android:imeOptions="actionUnspecified"
                android:inputType="textPostalAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                tools:textSize="14dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:focusableInTouchMode="true"
                android:hint="@string/phone"
                android:imeOptions="actionUnspecified"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                tools:textSize="14dp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:layout_marginTop="10dip"
            android:background="@color/colorAccent"
            android:text="@string/action_sign_in_short"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="21dp"
            android:layout_marginTop="10dip"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:layout_marginTop="8dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</android.support.constraint.ConstraintLayout>